2005-08-01 14:50 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridTriangularBarycentricCoordinate3D) finds the
	barycentric coordinates of a point in the plane of a triangle.

2005-07-29 11:28 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridCurveIntersectsFace) started blank routine to
	find the curve on the way out of the opposite face orbit of a
	node.

2005-07-29 10:25 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridFaceOppositeCellNode) returns an right handed
	face that pints at a given node of a cell.

2005-07-29 09:41 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridThreadCurveThroughVolume) started.
	* src/gridinsert.c (gridReconstructSplitEdgeRatio) calls
	gridThreadCurveThroughVolume.
	
2005-07-29 09:18 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeIfNear, gridSplitFaceAt, 
	gridSplitCellAt, gridInsertInToGeomEdge, gridInsertInToGeomFace,
	gridInsertInToVolume) changed x, y, z args to xyz array of 3. 
	
2005-07-28 13:48 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridFindEnclosingCell) added a hacked version to
	get started. I will need a more robust version for production.

2005-07-28 11:38 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridReconstructSplitEdgeRatio) addd to start
	code on getting that edge in.

2005-07-28 09:25 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridAdaptLongShortCurved,gridAdaptLongShortLinear)
	branched from gridAdaptLongShort to explore linear edge insertion.
	* src/unit_main.c (main) turn off valid cost constraint
	gridCOST_CNST_VALID. call gridAdaptLongShortCurved or
	gridAdaptLongShortLinear with test on gridCOST_CNST_VALID.

2005-07-28 09:00 Mike Park  <mike.park@nasa.gov>

	* Made 1.2.8 Release. ** internal release ** Tagging to test new
	direction for linear elements.

2005-07-27 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeForce) refactored to be more like
	gridSplitEdgeRatio and allow edge splits.
