@@ -465,7 +465,7 @@ class TestGridInsert < Test::Unit::TestCase
 
  def testSplitFaceAt
   assert_not_nil grid = faceGrid
-  assert_equal grid.nnode, grid.splitFaceAt(0,[0.3,0.3,0.0])
+  assert_equal grid.nnode, grid.splitFaceAt([0,1,2],[0.3,0.3,0.0])
   assert_equal 5, grid.nnode
   assert_equal 3, grid.ncell
   assert_equal 3, grid.nface 
@@ -473,7 +473,7 @@ class TestGridInsert < Test::Unit::TestCase
 
  def testSplitFaceAtNegVolume
   assert_not_nil grid = faceGrid
-  assert_equal( -1, grid.splitFaceAt(0,[1.0,1.0,0.0]) )
+  assert_equal( -1, grid.splitFaceAt([0,1,2],[1.0,1.0,0.0]) )
   assert_equal 4, grid.nnode
   assert_equal 1, grid.ncell
   assert_equal 1, grid.nface 
@@ -481,8 +481,8 @@ class TestGridInsert < Test::Unit::TestCase
 
  def testSplitFaceAtBadFace
   assert_not_nil grid = faceGrid
-  assert_equal( -1, grid.splitFaceAt(-1,[1.0,1.0,0.0]) )
-  assert_equal( -1, grid.splitFaceAt(1,[1.0,1.0,0.0]) )
+  assert_equal( -1, grid.splitFaceAt([-1,1,2],[1.0,1.0,0.0]) )
+  assert_equal( -1, grid.splitFaceAt([1,1,2],[1.0,1.0,0.0]) )
   assert_equal 4, grid.nnode
   assert_equal 1, grid.ncell
   assert_equal 1, grid.nface 
